--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,11 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* styles/fonts.css */
+@font-face {
+    font-family: 'Vazir';
+    src: url('../public/fonts/vazir/Vazir-Light.woff2') format('woff2'),
+    url('../public/fonts/vazir/Vazir-Light.woff') format('woff');
+    font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body{
+    font-family: 'Vazir', sans-serif
 }
